samples/_failures_safe/1761161556_0b0de1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1edf0351.c: In function ‘main’:
./samples/SAFE/__tmp_1edf0351.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_1edf0351.c:140:9: error: expected declaration or statement at end of input
